source-code-project/aarna-stream/dcae_helm/message_router/templates/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka1
  name: kafka1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/nonrtric-docker-net: "true"
        io.kompose.service: kafka1
    spec:
      containers:
      - env:
        - name: "KAFKA_ADVERTISED_LISTENERS"
          value: "INTERNAL_PLAINTEXT://kafka1.onap4k8s.svc.cluster.local:9092"
        - name: "KAFKA_OPTS"
          value: "-Djava.security.auth.login.config=/etc/kafka/secrets/jaas/zk_client_jaas.conf"
        - name: "enableCadi"
          value: "false"
        - name: "KAFKA_INTER_BROKER_LISTENER_NAME"
          value: "INTERNAL_PLAINTEXT"
        - name: "KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE"
          value: "false"
        - name: "KAFKA_ZOOKEEPER_CONNECTION_TIMEOUT_MS"
          value: "40000"
        - name: "KAFKA_OFFSETS_TOPIC_NUM_PARTITIONS"
          value: "1"
        - name: "KAFKA_ZOOKEEPER_CONNECT"
          value: "zookeeper.onap4k8s.svc.cluster.local:2181"
        - name: "KAFKA_LISTENER_SECURITY_PROTOCOL_MAP"
          value: "INTERNAL_PLAINTEXT:PLAINTEXT,EXTERNAL_PLAINTEXT:PLAINTEXT"
        - name: "KAFKA_LISTENERS"
          value: "INTERNAL_PLAINTEXT://0.0.0.0:9092"
        - name: "KAFKA_ZOOKEEPER_SESSION_TIMEOUT_MS"
          value: "40000"
        - name: "KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR"
          value: "1"
        - name: "KAFKA_ZOOKEEPER_SET_ACL"
          value: "true"
        - name: "PATH"
          value: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
        - name: "ALLOW_UNSIGNED"
          value: "false"
        - name: "PYTHON_VERSION"
          value: "2.7.9-1"
        - name: "PYTHON_PIP_VERSION"
          value: "8.1.2"
        - name: "SCALA_VERSION"
          value: "2.12"
        - name: "KAFKA_VERSION"
          value: "5.3.1"
        - name: "CONFLUENT_MAJOR_VERSION"
          value: "5"
        - name: "CONFLUENT_MINOR_VERSION"
          value: "3"
        - name: "CONFLUENT_PATCH_VERSION"
          value: "1"
        - name: "CONFLUENT_MVN_LABEL"
          value: ""
        - name: "CONFLUENT_PLATFORM_LABEL"
          value: ""
        - name: "CONFLUENT_VERSION"
          value: "5.3.1"
        - name: "CONFLUENT_DEB_VERSION"
          value: "1"
        - name: "ZULU_OPENJDK_VERSION"
          value: "8=8.38.0.13"
        - name: "LANG"
          value: "C.UTF-8"
        - name: "CUB_CLASSPATH"
          value: "/etc/confluent/docker/docker-utils.jar"
        - name: "COMPONENT"
          value: "kafka"
        - name: "KAFKA_USER"
          value: "mrkafka"

        image: nexus3.onap.org:10001/onap/dmaap/kafka111:1.0.4
        imagePullPolicy: Always 
        command:
        - sh
        - -exc
        - |
          export KAFKA_ADVERTISED_LISTENERS="INTERNAL_PLAINTEXT://kafka1.onap4k8s.svc.cluster.local:9092" && \
          exec /etc/confluent/docker/run
        name: kafka
        resources: {}
        volumeMounts:
        - mountPath: /etc/kafka/secrets/jaas/zk_client_jaas.conf
          subPath: zk_client_jaas.conf
          name: kafka-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: kafka-claim0
        configMap:
          name: kafka-config 
status: {}
