source-code-project/aarna-stream/dcae_helm/message_router/templates/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zookeeper
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/nonrtric-docker-net: "true"
        io.kompose.service: zookeeper
    spec:
      containers:
      - env:
        - name: KAFKA_OPTS
          value: -Djava.security.auth.login.config=/etc/zookeeper/secrets/jaas/zk_server_jaas.conf
            -Dzookeeper.kerberos.removeHostFromPrincipal=true -Dzookeeper.kerberos.removeRealmFromPrincipal=true
            -Dzookeeper.authProvider.1=org.apache.zookeeper.server.auth.SASLAuthenticationProvider
            -Dzookeeper.requireClientAuthScheme=sasl
        - name: ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL
          value: "24"
        - name: ZOOKEEPER_AUTOPURGE_SNAP_RETAIN_COUNT
          value: "3"
        - name: ZOOKEEPER_CLIENT_PORT
          value: "2181"
        - name: ZOOKEEPER_INIT_LIMIT
          value: "10"
        - name: ZOOKEEPER_MAX_CLIENT_CNXNS
          value: "200"
        - name: ZOOKEEPER_REPLICAS
          value: "1"
        - name: ZOOKEEPER_SERVER_ID
          value: "1"
        - name: ZOOKEEPER_SYNC_LIMIT
          value: "5"
        - name: ZOOKEEPER_TICK_TIME
          value: "2000"
        image: nexus3.onap.org:10001/onap/dmaap/zookeeper:6.0.3
        imagePullPolicy: ""
        name: zookeeper
        ports:
        - containerPort: 2181
        resources: {}
        volumeMounts:
        - mountPath: /etc/zookeeper/secrets/jaas/zk_server_jaas.conf
          subPath: zk_server_jaas.conf
          readOnly: true
          name: zookeeper-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: zookeeper-claim0
        configMap:
          name: zookeeper-config
status: {}
