source-code-project/aarna-stream/dcae_helm/message_router/templates/dmaap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: dmaap
  name: dmaap
spec:
  type: NodePort
  ports:
  - name: "3904"
    port: 3904
    nodePort: 32392
  - name: "3905"
    port: 3905
    nodePort: 30768
  selector:
    io.kompose.service: dmaap
status:
  loadBalancer: {}
