source-code-project/aarna-stream/dcae_helm/message_router/templates/nonrtric-docker-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nonrtric-docker-net
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
